[package]
name = "rustance"
version = "0.1.1"
authors = ["YinMo19 <me@YinMo19.top>"]
edition = "2024"
description = "a rust cli accounting application"
homepage = "https://github.com/YinMo19/rustance"
documentation = "https://docs.rs/rustance"
repository = "https://github.com/YinMo19/rustance"
license = "MIT"
readme = "README.md"
keywords = ["balance", "rustance", "Amount", "Account"]

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "derive",
    "sqlite",
    "macros",
    "runtime-tokio",
    "time",
    "chrono",
] }
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.8.20"
colored = "3.0.0"
chrono = "0.4.40"
tabled = { version = "0.18.0", features = ["ansi"] }
dirs = "6.0.0"

[profile.release]
lto = true
opt-level = "s"
